# QUANT-ROADMAP

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  fly.toml  spec.html
.cargo/: audit.toml
.github/workflows/: ci.yml  deploy.yml
assets/: main.css  tailwind.css
design/mockups/: .gitkeep
docs/: AUDIT.md  BACKLOG.md  DEPLOY.md  DEV_SETUP.md  PROGRESS.md
problems/: SCHEMA.md
problems/dsa/: array-search-complexity.toml  sum-of-array.toml
problems/migrated/: day1.toml  day2.toml  day3.toml
problems/probability/: two-dice-sum-vs-four.toml
schedule/: DAY_10.md  DAY_100.md  DAY_101.md  DAY_102.md  DAY_103.md  DAY_104.md  DAY_105.md  DAY_106.md  DAY_107.md  DAY_108.md  DAY_109.md  DAY_11.md  DAY_110.md  DAY_111.md  DAY_112.md  DAY_113.md  DAY_114.md  DAY_115.md  DAY_116.md  DAY_117.md  DAY_118.md  DAY_119.md  DAY_12.md  DAY_120.md  DAY_121.md  DAY_122.md  DAY_123.md  DAY_124.md  DAY_125.md  DAY_126.md  DAY_127.md  DAY_128.md  DAY_129.md  DAY_13.md  DAY_130.md  DAY_131.md  DAY_132.md  DAY_133.md  DAY_134.md  DAY_135.md  (+187 more)
src/: api.rs  auth.rs  bank.rs  calendar.rs  journal.rs  landing.rs  layout.rs  main.rs  planner.rs  practice.rs  progress.rs  roadmap.rs  runner.rs  server.rs  server_fns.rs  state.rs  strategy.rs  sync.rs  today.rs  worldmap.rs
supabase/migrations/: .gitkeep  0001_init.sql  0002_problems.sql
