[package]
name = "quant-roadmap"
version = "0.1.0"
authors = ["adity"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-storage = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
