[package]
name = "quant-roadmap"
version = "0.1.0"
authors = ["adity"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-storage = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Server-only dependencies (Phase 1). All optional + gated behind the `server`
# feature so the default `web` WASM client never pulls them and the service-role
# key / DB driver are never compiled into the browser bundle (CLAUDE.md 4.8).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"], optional = true }
jsonwebtoken = { version = "9", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"], optional = true }
chrono-tz = { version = "0.10", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
# Phase 0 fullstack proof. Non-default on purpose: the default `web` build and
# the GitHub Pages deploy (.github/workflows/deploy.yml) stay byte-for-byte
# unchanged until Phase 1. `fullstack` pulls the server-function machinery and
# client stubs; `server` additionally selects the server platform for the
# Axum-backed server binary. See docs/DEV_SETUP.md for how to run it locally.
fullstack = ["dioxus/fullstack"]
server = ["dioxus/server", "fullstack", "dep:sqlx", "dep:jsonwebtoken", "dep:uuid", "dep:tokio", "dep:chrono-tz", "dep:toml"]

# The problem seeder binary (src/bin/seed.rs) only builds with the server
# feature, so the default `web`/`cargo build` skips it.
[[bin]]
name = "seed"
path = "src/bin/seed.rs"
required-features = ["server"]
